force-app/main/default/objects/Case/fields/Amostra__c.field-meta.xml
<CustomField>
    <fullName>Amostra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Amostra que originou este Case (quando o Case foi criado automaticamente por reprovação — ver Flow Amostra_Reprovada_Cria_Case). Ver demanda-09.</description>
    <label>Amostra</label>
    <referenceTo>Amostra__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>