force-app/main/default/objects/Case/fields/CausaTecnicaReprovacao__c.field-meta.xml
<CustomField>
    <fullName>CausaTecnicaReprovacao__c</fullName>
    <description>Causa técnica identificada pelo químico para a reprovação da amostra — ver business-scenario.md/BRD 3.7. Aplicável a Cases do Record Type &quot;Envio e Teste de Amostra&quot;. Ver demanda-09.</description>
    <label>Causa Técnica de Reprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incompatibilidade com Substrato</fullName>
            </value>
            <value>
                <fullName>Incompatibilidade com Base do Cliente</fullName>
            </value>
            <value>
                <fullName>Instabilidade do Produto</fullName>
            </value>
            <value>
                <fullName>Entupimento de Cabeçote</fullName>
            </value>
            <value>
                <fullName>Aspecto/Aparência Fora do Esperado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>