force-app/main/default/objects/Case/fields/DataVisitaTecnica__c.field-meta.xml
<CustomField>
    <fullName>DataVisitaTecnica__c</fullName>
    <description>Data agendada para a visita técnica presencial do químico, quando MarcacaoVisitaTecnica__c estiver marcado — a demanda-09 pediu &quot;Checkbox e/ou Date&quot;; implementados os dois campos para cobrir ambos os usos. Ver demanda-09.</description>
    <label>Data da Visita Técnica</label>
    <type>Date</type>
</CustomField>