force-app/main/default/objects/Case/fields/MarcacaoVisitaTecnica__c.field-meta.xml
<CustomField>
    <fullName>MarcacaoVisitaTecnica__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se uma visita técnica presencial do químico foi marcada para este caso. Ver campo relacionado DataVisitaTecnica__c para a data agendada. Ver demanda-09.</description>
    <label>Marcação de Visita Técnica</label>
    <type>Checkbox</type>
</CustomField>