force-app/main/default/objects/Case/recordTypes/Envio_e_Teste_de_Amostra.recordType-meta.xml
<RecordType>
    <fullName>Envio_e_Teste_de_Amostra</fullName>
    <active>true</active>
    <businessProcess>Envio_e_Teste_de_Amostra</businessProcess>
    <description>Case criado quando uma amostra é registrada como Reprovada — roteado para a Queue &quot;Laboratório&quot;, atribuído ao químico responsável (ver Flow Amostra_Reprovada_Cria_Case e business-scenario.md/BRD 3.7). Ver demanda-09.</description>
    <label>Envio e Teste de Amostra</label>
</RecordType>