force-app/main/default/objects/Case/listViews/Laboratorio_Case.listView-meta.xml
<ListView>
    <fullName>Laboratorio_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Laboratório</label>
    <queue>Laboratorio</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>